--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dicee</title>
     <link rel="stylesheet" href="styles.css" />
     <link
@@ -11,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1>Roll the Dice 🎲</h1>
 
       <div class="dice">
         <p>Player 1</p>
@@ -22,6 +23,8 @@
         <p>Player 2</p>
         <img class="img2" src="./images/dice6.png" />
       </div>
+
+      <button id="roll-btn">Roll Dice</button>
     </div>
     <script src="./index.js"></script>
   </body>
